# assigment2-fastapi-AI-Enabled-Python

./: Makefile  README.md  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 8422c0e87f6e_init_book_member_and_borrowinghistory.py
app/: main.py
app/models/: __init__.py  models.py
app/router/: books.py  borrowing_history.py  members.py
app/schema/: schemas.py
script/: seeder.py
