[project]
name = "fastapi-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.6.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-lenght = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
exclude = ["alembic"]
